# ChangeLog for app-emulation/dosemu
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/dosemu/ChangeLog,v 1.11 2003/06/18 14:23:36 hanno Exp $

  18 Jun 2003; Hanno Boeck <hanno@gentoo.org> dosemu-1.1.5.ebuild:
  Change ~x86 to x86.

*dosemu-1.1.5 (07 Jun 2003)

  07 Jun 2003; Hanno Boeck <hanno@gentoo.org> dosemu-1.1.5.ebuild:
  Update to latest versions of dosemu and freedos.

*dosemu-1.1.4.15 (16 Apr 2003)

  16 Apr 2003; Alastair Tse <liquidx@gentoo.org> dosemu-1.1.4.15.ebuild,
  dosemu-1.1.4.ebuild:
  bumping to an unstable testing version because this fixes the ugly build
  scripts and also the errno problem with slang .ar.

*dosemu-1.1.4 (07 Feb 2003)

  07 Feb 2003; Ryan Phillips <rphillips@gentoo.org> dosemu-1.1.4.ebuild :
  new version

*dosemu-1.1.3-r1 (27 Jul 2002)

  19 Oct 2002; Daniel Ahlberg <aliz@gentoo.org> dosemu-1.1.3-r1.ebuild :
  Updated to mirror://sourceforge in SRC_URI.

  06 Aug 2002; Mark Guertin <gerk@gentoo.org> :
  Added -ppc to keywords

  27 Jul 2002; Stuart Bouyer <stubear@gentoo.org> dosemu-1.1.3-r1.ebuild :

  Added KEYWORDS="x86", SLOTS and RDEPEND for QA.

*dosemu-1.1.3-r1 (27 May 2002)

  28 May 2002; Ryan Phillips <rphillips@gentoo.org> dosemu-1.1.3-r1.ebuild :

  Tweaked ebuild slightly to be more robust.

  27 May 2002; Ryan Phillips <rphillips@gentoo.org> dosemu-1.1.3-r1.ebuild :

	1. add/fix manpage installation to /usr/share/man/man1
	2. enable mitsumi extentions, previously disabled due to compile errors
	3. enable compiletime 'experimental options' for ASPI and Mousedev support
	4. fix small typo and remove unnessacery make/make install stubs

	Fixes #3067.  Thanks Phillip.

*dosemu-1.1.3 (18 May 2002)

  18 May 2002; Ryan Phillips <rphillips@gentoo.org> ChangeLog :

  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. 