@@ -1,9 +1,11 @@
-MD5 1ba4edb019707d8f5d41c70d4db4f745 ChangeLog 1917
+MD5 7929ef99a21275f85506a88ca62888ee ChangeLog 2117
 MD5 27739374e52001236c26589a9f84f2c2 dosemu-1.1.3-r1.ebuild 2162
 MD5 63eec26157c6bd4f6d9e4090d8fd6883 dosemu-1.1.4.ebuild 2208
 MD5 180c11a4c53fcd6b7b87e18551ec3f20 dosemu-1.1.4.15.ebuild 1923
 MD5 c453563813460b8171b5472c58741979 dosemu-1.1.5.ebuild 1551
+MD5 aba391b4217eb39ef257f357a0d473d4 dosemu-1.1.5-r1.ebuild 1645
 MD5 20a65e5999072d738757e22ed2626e28 files/digest-dosemu-1.1.3-r1 129
 MD5 a6ff6e1d128581d10035bc7d7bc781a5 files/digest-dosemu-1.1.4 129
 MD5 5e4f5c1cb8a157071502e110dbb13e15 files/digest-dosemu-1.1.4.15 195
 MD5 1111d8e64602844f871f5c0f2deb839b files/digest-dosemu-1.1.5 133
+MD5 1111d8e64602844f871f5c0f2deb839b files/digest-dosemu-1.1.5-r1 133
