@@ -1,0 +1,2 @@
+MD5 3522d2c139c2fd30d333d93570274377 dosemu-freedos-b8p-bin.tgz 794880
+MD5 15b37a5e45bbeaa31bb19269327707ff dosemu-1.1.5.tgz 2121858
