@@ -1,6 +1,12 @@
 # ChangeLog for app-emulation/dosemu
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/dosemu/ChangeLog,v 1.11 2003/06/18 14:23:36 hanno Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/dosemu/ChangeLog,v 1.12 2003/06/20 17:47:41 hanno Exp $
+
+*dosemu-1.1.5-r1 (20 Jun 2003)
+
+  20 Jun 2003; Hanno Boeck <hanno@gentoo.org> dosemu-1.1.5-r1.ebuild:
+  Added patch to resolve installation problems (see bug #23110).
+  Changed ebuild to use CFLAGS.
 
   18 Jun 2003; Hanno Boeck <hanno@gentoo.org> dosemu-1.1.5.ebuild:
   Change ~x86 to x86.
